--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dominate==2.3.5
 Flask==1.0.2
 Flask-Bootstrap==3.3.7.1
 Flask-Script==2.0.6
+gunicorn==19.9.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
